# classification

./: .gitignore  README.md  knn_part_1.ipynb  knn_part_2.ipynb  linear_part_1.ipynb  linear_part_2.ipynb  mlp_part_2.ipynb  pyproject.toml  requirements.txt  sync.sh  test.py  test_assignments.py
.github/workflows/: sync.yml
assignments_solution/: knn_classifier.py  linear_classifier.py  mlp_classifier.py  preprocessing.py  tuning.py
data/templates/: failure_template.html  success_template.html
data/tests/: assignment_2_1.npy  assignment_3_1.pt  assignment_3_2.pt  assignment_3_3.pt  assignment_3_4.pt  assignment_4_1.pt  assignment_4_2.pt  assignment_4_3.pt  assignment_4_4.pt
src/animation/: __init__.py  main.py
src/assignments/: __init__.py  knn_classifier.py  linear_classifier.py  mlp_classifier.py  tuning.py
src/assignments_solution/: __init__.py  knn_classifier.py  linear_classifier.py  mlp_classifier.py  preprocessing.py  tuning.py
src/scripts/: __init__.py  submit.py  test.py  test_env.py
src/tests/: __init__.py  assignment.py  assignments_1.py  assignments_2.py  assignments_3.py  assignments_4.py  assignments_5.py  utils.py
src/utils/: __init__.py  datasets.py  engine.py  general.py  io.py  plot.py  visualizer.py
src/utils copy/: cifar.py  general.py  io.py  plot.py  visualizer.py
src/utils copy/.ipynb_checkpoints/: visualizer-checkpoint.py
