[project]
name = "classification"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Aleš Kučera", email = "kuceral4@fel.cvut.cz"}]
requires-python = ">= 3.11"
dependencies = ["torch>=2.4.0,<3"]
change-ps1 = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]   
classification = { path = ".", editable = true }

[tool.pixi.tasks]
jupyter = { cmd = "jupyter notebook --no-browser --NotebookApp.token='' --NotebookApp.password=''", cwd = "." }
tests = { cmd = "python test_assignments.py", cwd = "." }
submit = { cmd = "python submit.py", cwd = "." }
hello = { cmd = "python hello.py", cwd = "." }

[tool.pixi.dependencies]
manim = ">=0.18.1,<0.19"
numpy = ">=1.26.4,<2"
matplotlib = ">=3.9.1,<4"
jupyterlab = ">=4.2.4,<5"
scikit-learn = ">=1.5.1,<2"
plotly = ">=5.23.0,<6"
jupyter = ">=1.0.0,<2"
